objects/Account.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business_Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>BPM Services</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Migile</fullName>
                </value>
                <value>
                    <fullName>Social Champ</fullName>
                </value>
                <value>
                    <fullName>Emerging Technologies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Jitterbit</fullName>
                </value>
                <value>
                    <fullName>Odaseva</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>AssureClick</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Dream factory – Snapshot</fullName>
                </value>
                <value>
                    <fullName>Dream factory – Cascade &amp; others</fullName>
                </value>
                <value>
                    <fullName>Atlassian - Bamboo</fullName>
                </value>
                <value>
                    <fullName>Atlassian - Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Record_Owner_From_Vtiger__c</fullName>
        <label>Record Owner From Vtiger</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Record_Owner_From_Vtiger__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AutoRABIT_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>bb,nroka,pd’so,vdatl</value>
        </filters>
        <label>AutoRABIT Pipeline</label>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPM_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>PSK</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>BPM Services</value>
        </filters>
        <label>BPM Accounts</label>
        <sharedTo>
            <role>AutoRABIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Primary_Email__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>